# quantum

./: .gitignore  .gitmodules  .metadata  README.md  build.py  ffigen.yaml  pubspec.yaml
android/: build.gradle
android/app/src/main/java/io/flutter/plugins/: Messages.java
android/app/src/main/kotlin/dev/flutter/quantum/: Messages.g.kt
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/quantum/: QuantumPlugin.kt
android/src/main/kotlin/xyz/huable/quantum/: QuantumPlugin.kt
android/src/test/kotlin/com/example/quantum/: QuantumPluginTest.kt
android/src/test/kotlin/xyz/huable/quantum/: QuantumPluginTest.kt
example/: .gitignore  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/kotlin/com/example/quantum_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/windows/flutter/: generated_plugin_registrant.cc
example/windows/runner/: Runner.rc
flutter/quantum/example/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
ios/: quantum.podspec
ios/Classes/: QuantumPlugin.swift
lib/: bindings.dart  generated_bindings.dart  messages.g.dart  quantum.dart  quantum_method_channel.dart  quantum_platform_interface.dart
lib/database/: database.dart
lib/filesystem/: file.dart  file.g.dart  path.dart  storage.dart  storage.g.dart
lib/platform/macos/: generated_bindings.dart
lib/utils/: color.dart  md5.dart  random.dart  string.dart
linux/: CMakeLists.txt  messages.g.cc  messages.g.h  quantum_plugin.cc  quantum_plugin_private.h
linux/test/: quantum_plugin_test.cc
macos/: ffigen.yaml  quantum.podspec
macos/Classes/: QuantumPlugin.swift
macos/Runner/: messages.g.h  messages.g.m
macos/quantum/: Package.swift
macos/quantum/Frameworks/MTQuantum.xcframework/: Info.plist
macos/quantum/Frameworks/MTQuantum.xcframework/macos-arm64/MTQuantum.framework/: MTQuantum
macos/quantum/Frameworks/MTQuantum.xcframework/macos-arm64/MTQuantum.framework/Versions/A/Resources/: Info.plist
macos/quantum/Frameworks/MTQuantum.xcframework/macos-arm64/MTQuantum.framework/Versions/A/_CodeSignature/: CodeResources
macos/quantum/Sources/native/: quantum.cpp
macos/quantum/Sources/native/include/: quantum.h
macos/quantum/Sources/native/include/logger/: logger.h
macos/quantum/Sources/native/logger/: logger.cpp
macos/quantum/Sources/quantum/: Messages.g.swift  MessagesImpl.swift  QuantumPlugin.swift
src/: CMakeLists.txt  CMakePresets.json  module.modulemap  pigeon.dart  vcpkg.json
src/kepler/logger/: logger.cpp  logger.h
src/quantum/: quantum.h
src/quantum/logger/: logger.cpp  logger.h
src/tests/: CMakeLists.txt  main.c  main.cpp  version.c  version.h
src/tests/cases/: cases.c  cases.cpp
test/: quantum_method_channel_test.dart
windows/: CMakeLists.txt  quantum_plugin.cpp  quantum_plugin.h  quantum_plugin_c_api.cpp
windows/include/quantum/: quantum_plugin_c_api.h
windows/runner/: messages.g.cpp  messages.g.h  messages.host.cpp  messages.host.h
windows/test/: quantum_plugin_test.cpp
